# bulk-bot

./: Cargo.toml
src/: bmi.rs  bri.rs  config.rs  handler.rs  main.rs
